
### Data structures

Deleted files
-------------

Testing
-------

Build system
------------

- changed the default for TPI to tny

### Makefile

### Cmake

- increased minimal required cmake version to 3.11

Fixed bugs
----------

- fixed bug related to unreleased data for the Benders' decomposition framework. When reading an SMPS file and applying
  Benders' decomposition, data is created that was not correctly released. Also, data within the Benders' decomposition
  framework was not appropriately reset. The data is now released/reset as expected.

Miscellaneous
-------------

- add objective offset instead of objective offset variable in cip reader

Known bugs
----------

@page RN9 Release notes for SCIP 9

@section RN930 SCIP 9.3.0
*************************

Features
--------

Performance improvements
------------------------

Examples and applications
-------------------------

Interface changes
-----------------

### New and changed callbacks

### New API functions

### Command line interface

### Interfaces to external software

### Changed parameters

### New parameters

### Data structures

Fixed bugs
----------

@section RN921 SCIP 9.2.1
*************************

Fixed bugs
----------

- apply same feasibility definition in PaPILO as SCIP to avoid numerical inconsistencies
- check variable cancellation in SCIPvarAddVlb() and SCIPvarAddVub() to avert wrong infeasibility

Unit tests
----------

Testing
-------

Build system
------------

### Cmake

- fix SCIP Optimization Suite build with -DSYM=(s)bliss and bliss being downloaded and build during configuration by cmake
- fix use of a bliss cmake installation (from https://github.com/scipopt/bliss) specified via BLISS_DIR if -DSYM=(s)bliss

### Makefile

Miscellaneous
-------------

Known bugs
----------

@section RN920 SCIP 9.2.0
*************************

Features
--------
