@@ -140,33 +140,7 @@ if(SYM STREQUAL "bliss" OR SYM STREQUAL "sbliss")
         set(SYM_PIC_LIBRARIES Bliss::libbliss)
         message(STATUS "Found Bliss: ${Bliss_DIR}")
     else()
-        # Utilities to automatically download missing dependencies
-        include(cmake/Dependencies.cmake)
-        # modify configuration for bliss
-        set(BUILD_SHARED_LIBS OFF)
-        set(TMPFLAGS ${CMAKE_C_FLAGS})
-        set(TMXFLAGS ${CMAKE_CXX_FLAGS})
-        set(CMAKE_C_FLAGS -w)
-        set(CMAKE_CXX_FLAGS -w)
-        find_or_download_package(
-          NAME Bliss
-          VERSION 0.77
-          URL https://github.com/scipopt/bliss/archive/refs/tags/v0.77.tar.gz
-          URL_HASH SHA256=34c9cec2cb4dd73f881852bd1b1e0429859c8adcc6a61bc0d70a446a23b51d53
-          COMPONENTS libbliss)
-        # undo modification
-        set(CMAKE_C_FLAGS ${TMPFLAGS})
-        set(CMAKE_CXX_FLAGS ${TMXFLAGS})
-        set(BUILD_SHARED_LIBS ${SHARED})
-
-        find_package(Bliss CONFIG HINTS _deps/local)
-        if (NOT Bliss_FOUND)
-            message(FATAL_ERROR "Automatic download of Bliss failed. Please specify the BLISS_DIR.")
-        endif()
-        include_directories(${CMAKE_BINARY_DIR}/_deps/local/include)
-        set(SYM_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/local/lib/libbliss.a)
-        set(SYM_PIC_LIBRARIES ${CMAKE_BINARY_DIR}/_deps/local/lib/libbliss.a)
-        message(STATUS "Installed Bliss in: ${CMAKE_BINARY_DIR}/_deps/local")
+        message(FATAL_ERROR "Bliss not found, try installing https://github.com/scipopt/bliss and specifying BLISS_DIR.")
     endif()
 elseif(SYM STREQUAL "nauty" OR SYM STREQUAL "snauty")
     if(NAUTY_DIR)
