@@ -90,6 +90,8 @@ Build system
 ### Cmake
 
 - increased minimal required cmake version to 3.11
+- removed automatic download and build of Bliss during cmake configuration when -DSYM=(s)bliss;
+  please build and install from https://github.com/scipopt/bliss before and specify -DBLISS_DIR
 
 Fixed bugs
 ----------
